--- a/README
+++ b/README
@@ -1,2 +1,18 @@
 # SuperUserBot
 Allows certain users to gain a role temporarily using /sudo.
+
+# Running 
+Clone the repository:
+```bash
+git clone https://github.com/CAG2Mark/SuperUserBot
+cd SuperUserBot
+```
+Install the dependencies:
+```
+pip install -r requirements.txt
+```
+Run the bot:
+```
+python3 main.py
+```
+You may want to make a virtual Python environment.
